Address minor points in ch4/5

--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -253,7 +253,7 @@ xumx-sliCQ scored a median SDR of 3.67 dB with the STFT Wiener-EM step, and 3.70
 
 One potential source of poor performance in xumx-sliCQ is the design choice of using an independent neural network for each of the sub-matrices of the ragged sliCQT, proposed in Section \ref{sec:slicqarches}. Each sub-matrix of the ragged sliCQT contains frequency bins that were analyzed with the same temporal frame rate (see Section \ref{sec:raggedtf}). A target (or source) may contain distinct frequencies that are not necessarily in the same sub-matrix of the sliCQT. Consequently, the independent neural networks might only have access to a limited subset of the time-frequency information of a target. By contrast, UMX and X-UMX use a single neural network that learns from all of the frequencies of all of the targets simultaneously in a single STFT.
 
-Another potential source of errors in xumx-sliCQ is the de-overlap layer, shown in Figure \ref{fig:cdaeslicqt} and described in Section \ref{sec:deoverlap}. In Section \ref{sec:theoryslicqt}, I showed that the sliCQT has a symmetric zero-padding step to reduce time-domain aliasing. The sliCQT must be overlap-added to create a spectrogram, a procedure shown in Section \ref{sec:stftslicqtcomp1} that has has no inverse. In xumx-sliCQ, I implemented a learned inverse overlap by adding a transpose convolution layer added after the music demixing layers. By contrast, UMX and X-UMX do not need any extra layers, since the STFT can be used as a spectrogram directly.
+Another potential source of errors in xumx-sliCQ is the de-overlap layer, shown in Figure \ref{fig:cdaeslicqt} and described in Section \ref{sec:deoverlap}. In Section \ref{sec:theoryslicqt}, I showed that the sliCQT has a symmetric zero-padding step to reduce time-domain aliasing. The sliCQT must be overlap-added to create a spectrogram, a procedure shown in Section \ref{sec:stftslicqtcomp1} that has no inverse. In xumx-sliCQ, I implemented a learned inverse overlap by adding a transpose convolution layer added after the music demixing layers. By contrast, UMX and X-UMX do not need any extra layers, since the STFT can be used as a spectrogram directly.
 
 Finally, the CDAE hyperparameters in xumx-sliCQ, shown in Tables \ref{table:convtable1}--\ref{table:convtable4} in Section \ref{sec:slicqarches}, were perhaps kept too similar to the original STFT-based values (\cite[3]{plumbley1}) (\cite[3]{plumbley2}). The STFT and sliCQT, as has been shown throughout this thesis, are significantly different time-frequency transforms, and neural network architectures or hyperparameters for the STFT and sliCQT are not necessarily interchangeable. A more sophisticated approach should take into account the frequency bins of the nonlinear frequency scale and nonuniform time-frequency resolution of the sliCQT to optimize each CDAE independently.
 
