--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -24,7 +24,7 @@ In Section \ref{sec:demixresults}, I provided some of my guesses as to why xumx-
 
 My first guess was that targets may have their frequencies distributed into independent, unconnected neural networks in xumx-sliCQ, due to how a different neural network is applied to each sub-matrix in the ragged sliCQT, shown in Section \ref{sec:slicqarches}. In UMX and X-UMX, the neural network operates on all of the frequency bins at once on the single matrix of the STFT. \textcite{variableq1} proposed a single matrix form for the sliCQT, which may be of interest in a future version of xumx-sliCQ.
 
-My next guess was that there could be an additional source of errors in xumx-sliCQ because of the necessary de-overlap layer, shown in Section \ref{sec:deoverlap}. In Section \ref{sec:theoryslicqt}, I described that the need to overlap-add the sliCQT comes from the symmetric zero-padding applied to each slice, to reduce time-domain aliasing \parencite{slicq}. One idea is to remove the symmetric zero-padding from the sliCQT; this will eliminate the need for a de-overlap layer, but it will also reintroduce time-domain aliasing, which may have a detrimental affect on the music demixing quality.
+My next guess was that there could be an additional source of errors in xumx-sliCQ because of the necessary de-overlap layer, shown in Section \ref{sec:deoverlap}. In Section \ref{sec:theoryslicqt}, I described that the need to overlap-add the sliCQT comes from the symmetric zero-padding applied to each slice, to reduce time-domain aliasing \parencite{slicq}. One idea is to remove the symmetric zero-padding from the sliCQT; this will eliminate the need for a de-overlap layer, but it will also reintroduce time-domain aliasing, which may have a detrimental effect on the music demixing quality.
 
 My last guess was that neural network architectures and hyperparameters used in xumx-sliCQ were originally intended for the STFT, leading to subpar performance when copying them for the sliCQT in xumx-sliCQ. Better results might be obtained by performing a more in-depth search for optimal neural network architectures and hyperparameters tuned to the time-frequency characteristics of the sliCQT.
 
