Address more feedback

--- a/latex/ch0.tex
+++ b/latex/ch0.tex
@@ -25,7 +25,7 @@ Finally, I am grateful to the open-source community for music source separation 
 \begin{abstract}
 \phantomsection
 \addcontentsline{toc}{section}{\abstractname}
-	La s{\'e}paration des sources musicales est la t{\^a}che d'{\'e}xtraire une estimation d'une ou plusieurs sources ou instruments musicaux (p. ex. les percussions ou la voix) dans un enregistrement audio musicale. La t{\^a}che du d{\'e}mixage de musique consid{\`e}re le cas o{\`u} l'enregistrement audio musicale est s{\'e}par{\'e} en toutes ses sources constitutives qui peuvent {\^e}tre resomm{\'e}s pour recr{\'e}er l'ensemble d'origine. Les mod{\`e}les pour le d{\'e}mixage de musique qui utilisent la transformée de Fourier {\`a} court terme (TFCT) pour repr{\'e}senter les signaux musicaux sont populaires est ont obtenus du succ{\'e}s au cours des derni{\`e}res ann{\'e}es. Toutefois, la r{\'e}solution fix{\'e}e temporelle et fr{\'e}quentielle de la TFCT, r{\'e}sultant du principe d'incertitude de temps-fréquences, n{\'e}cessite un compromis entre la r{\'e}solution temporelle et fr{\'e}quentielle qui peut affecter consid{\'e}rablement les r{\'e}sultats du d{\'e}mixage de musique. La transform{\'e}e Constant-Q en tranche (sliCQT) est une transform{\'e}e temps-fr{\'e}quence avec une r{\'e}solution variable temporelle et fr{\'e}quentielle qui {\'e}vite le compromis de la TFCT. Le mod{\`e}le propos{\'e} par cette th{\`e}se remplace la TFCT par la sliCQT dans un mod{\`e}le de d{\'e}mixage de musique pour investiguer l'impact sur les r{\'e}sultats.
+	La séparation de sources musicales consiste à extraire d’un enregistrement audio une ou plusieurs sources ou instruments de musique (tels que des percussions ou de la voix). Plus spécifiquement, la tâche de démixage correspond au cas où l’enregistrement audio est séparé en toutes ses sources constitutives, qui peuvent être re-mixées pour restituer l’ensemble original. Les modèles de démixage de musique qui se fondent sur la transformée de Fourier à court-terme (TFCT) pour représenter les signaux sonores sont populaires et ont été utilisées avec succès au cours des dernières années. Toutefois, le compromis entre résolution temporelle et résolution fréquentielle préfixé dans la TFCT, résultant du principe d’incertitude temps-fréquence, peut affecter considérablement les résultats du démixage audio. La transformée en tranche à facteur de qualité constant (sliCQT) est une transformée temps-fréquence pour laquelle le compromis entre résolutions temporelle et fréquentielle varie selon la région spectrale considérée, ce qui permet une plus grande flexibilité d’approche qu’avec la TFCT. Le modèle proposé dans cette thèse remplace la TFCT par la sliCQT dans un modèle de démixage audio et évalue l’impact de ce choix sur les résultats.
 \end{abstract}
 
 \end{document}
