--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -47,7 +47,7 @@ The Constant-Q Transform (CQT) was originally proposed by \textcite{jbrown} to a
 	\label{fig:violin}
 \end{figure}
 
-Building on the Gabor transform (or STFT), and using the Constant-Q Transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform taken. The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
+Building on the Gabor transform (or STFT), and using the Constant-Q Transform as the motivating application, \textcite{balazs} proposed the Nonstationary Gabor transform (NSGT), a time-frequency transform with varying time-frequency resolution and a perfect inverse. The NSGT is computed by varying the size of the window on which the Fourier Transform is taken. The NSGT spectrogram of the musical glockenspiel signal is shown in Figure \ref{fig:nsgttradeoff}, where one can observe minimal blurriness (or good resolution) in both time and frequency, which is an improvement over the STFT spectrogram seen in Figure \ref{fig:stfttradeoff}.
 
 \begin{figure}[ht]
 	\centering
