--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -10,11 +10,9 @@ In this chapter, I will introduce the theoretical background necessary to unders
 
 In Section \ref{sec:freqdomain}, I will introduce the frequency domain, which is alternative representation of acoustic signals. In Section \ref{sec:freqanal}, I will discuss frequency analysis and the Fourier transform. In Section \ref{sec:jointtfa}, I will describe joint time-frequency analysis, time-frequency transforms, and the Short-Time Fourier Transform (STFT). In Section \ref{sec:cqt}, I will introduce the Constant-Q Transform (CQT), which is a time-frequency transform designed to display more musical information than the STFT. In Section \ref{sec:theorynsgt}, I will introduce the Nonstationary Gabor Transform (NSGT), which is a time-frequency transform that can be used to implement the CQT with a perfect inverse. In Section \ref{sec:theoryslicqt}, I will introduce the sliced Constant-Q Transform (sliCQT), which is a realtime variant of the NSGT. Finally, in Section \ref{sec:raggedtf}, I will describe how nonuniform time-frequency transforms (e.g., CQT, NSGT, sliCQT) differ from a uniform time-frequency transform like the STFT.
 
-In Section \ref{sec:ml}, I will give an overview of machine learning and deep learning, and how these methods are typically applied to audio or musical applications, commonly in the form of convolutional neural networks (CNN) or recurrent neural networks (RNN).
+In Section \ref{sec:ml}, I will give an overview of machine learning and deep learning, and how these methods are typically applied to audio or musical applications, commonly in the form of convolutional neural networks (CNN) or recurrent neural networks (RNN). In Section \ref{sec:softcode}, I will give an overview of important concepts in software and code relevant to this thesis.
 
-In Section \ref{sec:softcode}, I will give an overview of important concepts in software and code relevant to this thesis. In Section \ref{sec:pythonbasics}, I will describe core concepts of the Python programming language that I will be using in subsequent sections to describe the code I wrote to implement and test my hypothesis. In Section \ref{sec:gitvcs}, I will describe version control for software projects and introduce Git, a tool for storing and tracking changes in code projects. In Section \ref{sec:ossgithub}, I will describe open-source software and GitHub, which is a social website for sharing open-source code that use Git. I will be releasing the code that I wrote for this thesis on GitHub for public availability.
-
-In Section \ref{sec:musicsep}, I will describe the tasks of music source separation and music demixing. I will provide a definition of the tasks, and their motivations and uses, in Section \ref{sec:musicsepdefsmotivations}. In Section \ref{sec:musicsepbackground}, I will give an overview of computational approaches to general audio source separation, leading to current trends in music source separation and demixing. In Section \ref{sec:musicsepdatasets}, I will describe the public datasets used for music source separation research, and in Section \ref{sec:evalbss}, I will describe metrics that are commonly used for evaluating music source separation methods. In Section \ref{sec:masksandoracles}, I will describe the technique of time-frequency masking, which is a popular strategy used for spectrogram-based music source separation, and oracle estimators, which are methods for estimating the upper limit of quality achievable by time-frequency masking. In Section \ref{sec:noisyphaseoracle}, I will describe the noisy phase strategy, which is a common strategy for only estimating the spectrogram and using the phase of the original mixed audio, or the ``noisy phase.'' In Section \ref{sec:hpss}, I will describe Harmonic/Percussive Source Separation (HPSS), which is a simple algorithm for music source separation based on the STFT spectrogram masking that exemplifies the time-frequency tradeoff of the STFT. In Section \ref{sec:umx}, I will describe Open-Unmix, the model that will be the starting point for this thesis, and in Section \ref{sec:xumx}, I will describe its closely-related variant, CrossNet-Open-Unmix. Finally, in Section \ref{sec:cdae}, I will describe Convolutional Denoising Autoencoders (CDAE), which are another type of music source separation model that I will incorporate in the final model of this thesis.
+In Section \ref{sec:musicsep}, I will describe the tasks of music source separation and music demixing. I will provide a definition of the tasks, their motivations and uses, a survey of historical approaches to computational audio source separation, and trends in music source separation leading to the current state of the art.
 
 \subsection{Transforms of acoustic signals}
 \label{sec:freqdomain}
